--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -48,38 +48,28 @@ jobs:
 
             ngrok config add-authtoken "$NGROK_AUTH_TOKEN"
 
-            # Remove previous Docker container if exists
             if sudo docker ps -a --format '{{.Names}}' | grep -Eq "^attendance-app\$"; then
               sudo docker rm -f attendance-app || true
             fi
 
-            # Kill existing ngrok process and free port
             sudo pkill -f "ngrok http" || true
             sudo fuser -k \$EXTERNAL_PORT/tcp || true
 
-            # Remove and recreate app directory
             sudo rm -rf "\$APP_DIR"
             mkdir -p "\$APP_DIR"
 
-            # Clone repository fresh
             git clone https://github.com/Praven4754/Attendance-Assistant-Phidata.git "\$APP_DIR"
             cd "\$APP_DIR"
 
-            # Create .env file with no indent and unquoted delimiter
             cat > "\$APP_DIR/.env" <<ENV_EOF
             GOOGLE_API_KEY='${GOOGLE_API_KEY:-not_set}'
             ENV_EOF
 
-            IMAGE_TAG="attendance-app-\$(date +%Y%m%d%H%M%S)"
+            sudo docker build -t attendance-app "\$APP_DIR"
+            sudo docker run -d --name attendance-app --env-file "\$APP_DIR/.env" -p \$EXTERNAL_PORT:\$INTERNAL_PORT attendance-app
 
-            # Build and run Docker container
-            sudo docker build -t attendance-app:\$IMAGE_TAG "\$APP_DIR"
-            sudo docker run -d --name attendance-app --env-file "\$APP_DIR/.env" -p \$EXTERNAL_PORT:\$INTERNAL_PORT attendance-app:\$IMAGE_TAG
-
-            # Start ngrok in background
             nohup ngrok http \$EXTERNAL_PORT > /home/ubuntu/ngrok.log 2>&1 &
 
-            # Wait for ngrok public URL to appear
             for i in {1..12}; do
               NGROK_URL=\$(curl -s http://127.0.0.1:4040/api/tunnels | jq -r '.tunnels[0].public_url')
               if [ -n "\$NGROK_URL" ] && [[ "\$NGROK_URL" != "null" ]]; then
