--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -48,6 +48,7 @@ jobs:
 
             ngrok config add-authtoken "$NGROK_AUTH_TOKEN"
 
+            # Remove old container if exists
             if sudo docker ps -a --format '{{.Names}}' | grep -Eq "^attendance-app\$"; then
               sudo docker rm -f attendance-app || true
             fi
@@ -61,16 +62,30 @@ jobs:
             git clone https://github.com/Praven4754/Attendance-Assistant-Phidata.git "\$APP_DIR"
             cd "\$APP_DIR"
 
+            # Create .env file
             cat > "\$APP_DIR/.env" <<ENV_EOF
             GOOGLE_API_KEY='${GOOGLE_API_KEY:-not_set}'
             ENV_EOF
 
+            # Build and run docker container
             sudo docker build -t attendance-app "\$APP_DIR"
             sudo docker run -d --name attendance-app --env-file "\$APP_DIR/.env" -p \$EXTERNAL_PORT:\$INTERNAL_PORT attendance-app
 
+            # Start ngrok tunnel in background
             nohup ngrok http \$EXTERNAL_PORT > /home/ubuntu/ngrok.log 2>&1 &
+
+            # Wait and get ngrok URL
+            for i in {1..12}; do
+              NGROK_URL=\$(curl -s http://127.0.0.1:4040/api/tunnels | jq -r '.tunnels[0].public_url' || echo "")
+              if [ -n "\$NGROK_URL" ] && [ "\$NGROK_URL" != "null" ]; then
+                echo "Ngrok URL: \$NGROK_URL"
+                echo "\$NGROK_URL" > /home/ubuntu/ngrok_url.txt
+                break
+              fi
+              sleep 5
+            done
           ENDSSH
 
-      - name: Show deployed app status
+      - name: Show Ngrok URL
         run: |
-          ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_HOST }} "sudo docker ps -f name=attendance-app"
+          ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_HOST }} "cat /home/ubuntu/ngrok_url.txt"
