--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -30,7 +30,6 @@ jobs:
             INTERNAL_PORT=7860
             EXTERNAL_PORT=7860
 
-            # Ensure app directory exists
             mkdir -p "$APP_DIR"
 
             # Install Docker if missing
@@ -41,7 +40,7 @@ jobs:
               sudo systemctl start docker
             fi
 
-            # Install Ngrok if missing
+            # Install ngrok if missing
             if ! command -v ngrok >/dev/null 2>&1; then
               curl -s https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-stable-linux-amd64.zip -o ngrok.zip
               unzip ngrok.zip
@@ -49,7 +48,6 @@ jobs:
               rm -f ngrok.zip
             fi
 
-            # Configure Ngrok
             ngrok config add-authtoken "$NGROK_AUTH_TOKEN"
 
             # Stop previous container and free port
@@ -67,25 +65,23 @@ jobs:
             git clone https://github.com/Praven4754/Attendance-Assistant-Phidata.git "$APP_DIR"
             cd "$APP_DIR"
 
-            # Create .env file (no indentation for EOF)
+            # Create .env file (NO INDENTATION)
             cat > "$APP_DIR/.env" <<ENV_EOF
             GOOGLE_API_KEY='${GOOGLE_API_KEY:-not_set}'
             ENV_EOF
 
-            # Build Docker image
+            # Declare IMAGE_TAG BEFORE docker build
             IMAGE_TAG="attendance-app-$(date +%Y%m%d%H%M%S)"
+            
+                        # Build and run Docker container
             sudo docker build -t $IMAGE_TAG "$APP_DIR"
-
-            # Run Docker container
             sudo docker run -d --name attendance-app --env-file "$APP_DIR/.env" -p $EXTERNAL_PORT:$INTERNAL_PORT $IMAGE_TAG
-
-            # Start Ngrok in background
+            
+                        # Start ngrok in background
             nohup ngrok http $EXTERNAL_PORT > /home/ubuntu/ngrok.log 2>&1 &
-
-            # Initialize NGROK_URL
+            
+                        # Wait for Ngrok tunnel and save URL
             NGROK_URL=""
-
-            # Wait for Ngrok tunnel and save URL
             for i in {1..12}; do
               NGROK_URL=$(curl -s http://127.0.0.1:4040/api/tunnels | jq -r '.tunnels[0].public_url' || echo "")
               if [ -n "$NGROK_URL" ] && [ "$NGROK_URL" != "null" ]; then
