--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -23,20 +23,23 @@ jobs:
           GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
           NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
         run: |
-          ssh -o StrictHostKeyChecking=no ubuntu@$EC2_HOST 'bash -s' <<'ENDSSH'
+          ssh -o StrictHostKeyChecking=no ubuntu@$EC2_HOST "
+          export GOOGLE_API_KEY='$GOOGLE_API_KEY'
+          export NGROK_AUTH_TOKEN='$NGROK_AUTH_TOKEN'
+          
           set -eux
           
           # ----------------------
           # Variables
           # ----------------------
-          APP_DIR="/home/ubuntu/app"
+          APP_DIR=\"/home/ubuntu/app\"
           INTERNAL_PORT=7860
           EXTERNAL_PORT=7860
           
           # ----------------------
           # Prepare directories
           # ----------------------
-          mkdir -p "${APP_DIR}"
+          mkdir -p \"\$APP_DIR\"
           
           # ----------------------
           # Install Docker if missing
@@ -58,82 +61,78 @@ jobs:
             rm -f ngrok.zip
           fi
           
-          # Configure ngrok with environment variable passed from GitHub Actions
-          ngrok config add-authtoken "${NGROK_AUTH_TOKEN}"
+          # Configure ngrok with environment variable
+          ngrok config add-authtoken \"\$NGROK_AUTH_TOKEN\"
           
           # ----------------------
           # Stop previous container & free port
           # ----------------------
-          if sudo docker ps -a --format '{{.Names}}' | grep -Eq "^attendance-app$"; then
+          if sudo docker ps -a --format '{{.Names}}' | grep -Eq '^attendance-app\$'; then
             sudo docker rm -f attendance-app || true
           fi
-          sudo pkill -f "ngrok http" || true
-          sudo fuser -k ${EXTERNAL_PORT}/tcp || true
+          sudo pkill -f 'ngrok http' || true
+          sudo fuser -k \$EXTERNAL_PORT/tcp || true
           
           # ----------------------
           # Clean app directory
           # ----------------------
-          sudo rm -rf "${APP_DIR}"
-          mkdir -p "${APP_DIR}"
+          sudo rm -rf \"\$APP_DIR\"
+          mkdir -p \"\$APP_DIR\"
           
           # ----------------------
           # Clone project
           # ----------------------
-          git clone https://github.com/Praven4754/Attendance-Assistant-Phidata.git "${APP_DIR}"
-          cd "${APP_DIR}"
+          git clone https://github.com/Praven4754/Attendance-Assistant-Phidata.git \"\$APP_DIR\"
+          cd \"\$APP_DIR\"
           
           # ----------------------
           # Create .env file
           # ----------------------
-          cat > "${APP_DIR}/.env" <<ENV_EOF
-          GOOGLE_API_KEY='${GOOGLE_API_KEY}'
+          cat > \"\$APP_DIR/.env\" << 'ENV_EOF'
+          GOOGLE_API_KEY='\$GOOGLE_API_KEY'
           ENV_EOF
-          
+                    
           # ----------------------
           # Build and run Docker container
           # ----------------------
-          IMAGE_TAG="attendance-app-$(date +%Y%m%d%H%M%S)"
-          sudo docker build -t ${IMAGE_TAG} "${APP_DIR}"
-          sudo docker run -d --name attendance-app --env-file "${APP_DIR}/.env" -p ${EXTERNAL_PORT}:${INTERNAL_PORT} ${IMAGE_TAG}
+          IMAGE_TAG=\"attendance-app-\$(date +%Y%m%d%H%M%S)\"
+          sudo docker build -t \$IMAGE_TAG \"\$APP_DIR\"
+          sudo docker run -d --name attendance-app --env-file \"\$APP_DIR/.env\" -p \$EXTERNAL_PORT:\$INTERNAL_PORT \$IMAGE_TAG
           
           # ----------------------
           # Start ngrok
           # ----------------------
-          nohup ngrok http ${EXTERNAL_PORT} > /home/ubuntu/ngrok.log 2>&1 &
+          nohup ngrok http \$EXTERNAL_PORT > /home/ubuntu/ngrok.log 2>&1 &
+          
+          # ----------------------
+          # Wait for ngrok to start
+          # ----------------------
+          sleep 5
           
           # ----------------------
           # Fetch Ngrok URL
           # ----------------------
-          NGROK_URL=""
+          NGROK_URL=\"\"
           for i in {1..12}; do
-            NGROK_URL=$(curl -s http://127.0.0.1:4040/api/tunnels | jq -r '.tunnels[0].public_url' || echo "")
-            if [ -n "${NGROK_URL}" ] && [ "${NGROK_URL}" != "null" ]; then
-              echo "${NGROK_URL}" > /home/ubuntu/ngrok_url.txt
-              echo "Ngrok URL: ${NGROK_URL}"
+            NGROK_URL=\$(curl -s http://127.0.0.1:4040/api/tunnels 2>/dev/null | jq -r '.tunnels[0].public_url' 2>/dev/null || echo \"\")
+            if [ -n \"\$NGROK_URL\" ] && [ \"\$NGROK_URL\" != \"null\" ] && [ \"\$NGROK_URL\" != \"\" ]; then
+              echo \"\$NGROK_URL\" > /home/ubuntu/ngrok_url.txt
+              echo \"Ngrok URL: \$NGROK_URL\"
               break
             fi
+            echo \"Waiting for ngrok... attempt \$i\"
             sleep 5
           done
-          ENDSSH
-
-      - name: Pass environment variables to SSH session
-        env:
-          EC2_HOST: ${{ secrets.EC2_HOST }}
-          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
-          NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-        run: |
-          ssh -o StrictHostKeyChecking=no ubuntu@$EC2_HOST "
-            export GOOGLE_API_KEY='$GOOGLE_API_KEY'
-            export NGROK_AUTH_TOKEN='$NGROK_AUTH_TOKEN'
-            
-            # Update .env file with correct API key
-            echo \"GOOGLE_API_KEY='$GOOGLE_API_KEY'\" > /home/ubuntu/app/.env
-            
-            # Restart container with updated environment
-            if sudo docker ps --format '{{.Names}}' | grep -q '^attendance-app$'; then
-              sudo docker restart attendance-app
-            fi
+          
+          if [ -z \"\$NGROK_URL\" ] || [ \"\$NGROK_URL\" = \"null\" ]; then
+            echo \"Failed to get ngrok URL\"
+            echo \"Ngrok log:\"
+            cat /home/ubuntu/ngrok.log || echo \"No ngrok log found\"
+            exit 1
+          fi
           "
 
       - name: Show Ngrok URL
-        run: ssh -o StrictHostKeyChecking=no ubuntu@$EC2_HOST "cat /home/ubuntu/ngrok_url.txt"
+        run: |
+          NGROK_URL=$(ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_HOST }} "cat /home/ubuntu/ngrok_url.txt 2>/dev/null || echo 'URL not found'")
+          echo "Final Ngrok URL: $NGROK_URL"
