--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -86,16 +86,16 @@ jobs:
           cd "$APP_DIR"
 
           # ----------------------
-          # Create .env file (fixed for variable expansion)
+          # Create .env file (variable expansion fixed)
           # ----------------------
           cat > "$APP_DIR/.env" <<ENV_EOF
           GOOGLE_API_KEY=$GOOGLE_API_KEY
           ENV_EOF
 
           # ----------------------
-          # Build and run Docker container
+          # Build and run Docker container (Docker tag fixed)
           # ----------------------
-          IMAGE_TAG="attendance-app-\$(date +%Y%m%d%H%M%S)"
+          IMAGE_TAG="attendance-app-$(date +%Y%m%d%H%M%S)"
           sudo docker build -t "$IMAGE_TAG" "$APP_DIR"
           sudo docker run -d --name attendance-app --env-file "$APP_DIR/.env" -p "$EXTERNAL_PORT:$INTERNAL_PORT" "$IMAGE_TAG"
 
